--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack"
+    "build": "next build --turbopack",
+    "generate-client": "openapi-ts --input ./openapi.json --output ./lib/api --client @hey-api/client-fetch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@vercel/analytics": "^1.5.0",
@@ -23,6 +27,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-medium-image-zoom": "^5.3.0",
     "react-player": "^2.16.1",
     "react-tweet": "^3.2.2",
@@ -39,6 +44,8 @@
     "@content-collections/core": "^0.10.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/next": "^0.2.6",
+    "@hey-api/client-fetch": "^0.13.1",
+    "@hey-api/openapi-ts": "0.80.5",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24",
     "@types/react": "^19",
