--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "generate-client": "openapi-ts --input ./openapi.json --output ./lib/api --client @hey-api/client-fetch"
+    "generate-client": "openapi-ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -14,6 +14,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-flag-emoji-polyfill": "^0.1.8",
@@ -24,6 +25,7 @@
     "next": "15.4.4",
     "next-recaptcha-v3": "^1.5.2",
     "next-themes": "^0.4.6",
+    "prettier": "^3.6.2",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -44,6 +46,7 @@
     "@content-collections/core": "^0.10.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/next": "^0.2.6",
+    "@hey-api/client-axios": "^0.9.1",
     "@hey-api/client-fetch": "^0.13.1",
     "@hey-api/openapi-ts": "0.80.5",
     "@tailwindcss/postcss": "^4.1.11",
