--- a/package.json
+++ b/package.json
@@ -14,8 +14,30 @@
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
@@ -24,10 +46,14 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "country-flag-emoji-polyfill": "^0.1.8",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
+    "embla-carousel-react": "^8.6.0",
     "flatpickr": "^4.6.13",
     "fumadocs-core": "^15.6.6",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.526.0",
     "motion": "^12.23.9",
     "next": "15.4.4",
@@ -37,18 +63,22 @@
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-medium-image-zoom": "^5.3.0",
     "react-player": "^2.16.1",
+    "react-resizable-panels": "^3.0.4",
     "react-tweet": "^3.2.2",
     "reading-time": "^1.5.0",
+    "recharts": "2.15.4",
     "resend": "^4.7.0",
     "schema-dts": "^1.1.5",
     "shadcn-prose": "^1.0.12",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.0.10"
   },
   "devDependencies": {
