--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "generate-client": "openapi-ts"
   },
   "dependencies": {
+    "@conform-to/react": "^1.8.2",
+    "@conform-to/zod": "^1.8.2",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
