--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@react-jvectormap/world": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@vercel/analytics": "^1.5.0",
+    "ag-grid-community": "^34.1.1",
+    "ag-grid-react": "^34.1.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,6 +62,7 @@
     "motion": "^12.23.9",
     "next": "15.4.4",
     "next-recaptcha-v3": "^1.5.2",
+    "next-safe": "^3.5.0",
     "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "radix-ui": "^1.4.2",
