--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@react-email/components": "^0.5.0",
+    "@react-email/render": "^1.2.0",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.13.8",
